# firepass-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/firepass-researcher/: SKILL.md
skills/firepass-reviewer/: SKILL.md
skills/firepass-worker/: SKILL.md
src/firepass_mcp/: __init__.py  __main__.py  server.py
