[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firepass-mcp"
version = "0.1.0"
description = "MCP server that wraps Kimi K2.5 Turbo (Fireworks AI) as an agentic coding assistant with a full tool loop."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jake Gearon" }]
keywords = ["mcp", "fireworks", "kimi", "agent", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/jameshgrn/firepass-mcp"

[project.scripts]
firepass-mcp = "firepass_mcp.server:main"
